--- a/portfolio page/portfolio_update_v1/index.html
+++ b/portfolio page/portfolio_update_v1/index.html
@@ -47,9 +47,8 @@
     </main>
     <footer>
       <ul>
-        <li><a href="#" class="social twitter">Twitter</a></li>
-        <li><a href="#" class="social linkedin">LinkedIn</a></li>
-        <li><a href="#" class="social github">Github</a></li>
+        <li><a href="https://www.linkedin.com/in/jessica-gibbins-a26472195/" target=_blank class="social linkedin">LinkedIn</a></li>
+        <li><a href="https://github.com/Jessgibbins" target=_blank class="social github">Github</a></li>
       </ul>
       <p class="copyright">Copyright 2019, Jess Gibbins</p>
     </footer>
