--- a/portfolio-page/interests.html
+++ b/portfolio-page/interests.html
@@ -9,7 +9,7 @@
     <div class="main-nav">
       <ul class="nav">
         <li class="name">Jess Gibbins</li>
-        <li><a href="../portfolio_update_v1/index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="#">interests</a></li>
       </ul>
     </div>
