--- a/portfolio-page/index.html
+++ b/portfolio-page/index.html
@@ -13,8 +13,8 @@
     <div class="main-nav">
         <ul class="nav">
           <li class="name">Jess Gibbins</li>
-          <li><a href="../portfolio_update_v1/index.html">Home</a></li>
-          <li><a href="../portfolio_update_v1/interests.html">interests</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="interests.html">interests</a></li>
         </ul>
     </div>
 
