Changed div tags
Changed div tags to nav and section tags.

--- a/portfolio-page/index.html
+++ b/portfolio-page/index.html
@@ -10,13 +10,13 @@
 
   <body>
 
-    <div class="main-nav">
+    <nav>
         <ul class="nav">
           <li class="name">Jess Gibbins</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="interests.html">interests</a></li>
         </ul>
-    </div>
+      </nav>
 
     <header class="main-head">
       <img src="images/profile.jpg" alt="Photo of Jess Gibbins" class="profile-image">
@@ -25,13 +25,13 @@
     </header>
 
     <main class="flex">
-      <div class="card">
+      <section class="card">
         <h2>Background</h2>
         <p>I’m an aspiring web developer who loves everything about design and the web.</p>
         <p>I’ve gone from being a nanny to running my own small clothing business in a few short years. I am now looking forward to expanding my skills by learning more about web development.</p>
-      </div>
+      </section>
 
-      <div class="card">
+      <section class="card">
         <h2>Goals</h2>
         <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
         <ul class="skills">
@@ -42,7 +42,7 @@
           <li>Angular</li>
         </ul>
         <p>I’d like to work for a web development firm helping clients create an impressive online presence.</p>
-      </div>
+      </section>
 
     </main>
     <footer>
