--- a/portfolio-page/interests.html
+++ b/portfolio-page/interests.html
@@ -6,32 +6,32 @@
   </head>
 
   <body>
-    <div class="main-nav">
+    <nav>
       <ul class="nav">
         <li class="name">Jess Gibbins</li>
         <li><a href="index.html">Home</a></li>
         <li><a href="#">interests</a></li>
       </ul>
-    </div>
+    </nav>
 
       <header class="interests-head">
         <h1 class="tag">My Interests</h1>
       </header>
 
       <main class="flex">
-        <div class="card">
+        <section class="card">
           <h2>Design</h2>
           <img src="images/artist.jpg" alt="Artist" class="card-photo">
           <p>I have been drawing and painting since before I can remember.</p>
           <p>One of my biggest passions is art and I recently started learning more about design. I would love to keep learning and apply those skills to web development.</p>
-        </div>
+        </section>
   
-        <div class="card">
+        <section class="card">
           <h2>Cooking</h2>
           <img src="images/breakfast.jpg" alt="Breakfast" class="card-photo">
           <p>One of my favorite things to do is come up with new recipies.</p>
           <p>I have been a vegan for a long time and love taking a familar food like mac and cheese and recreating it using only plant-based ingredients. I love when I come up with recipies that everyone enjoys.</p>
-        </div>
+        </section>
   
       </main>
       <footer>
